added 31 markdown files for zines, updated zine img file names

--- a/themes/coil/languages/en.yml
+++ b/themes/coil/languages/en.yml
@@ -7,7 +7,7 @@ nav:
   about: About
   contact: Contact
   memes: Participate
-  download: Download
+  resources: Resources
 
 contact:
   name: Name
