--- a/themes/coil/languages/es.yml
+++ b/themes/coil/languages/es.yml
@@ -7,7 +7,7 @@ nav:
   about: Sobre
   contact: Contacto
   memes: Participe
-  download: Descargar
+  download: Recursos
 
 contact:
   name: Nombre
